fix: read next section breaks in safari
fixes issue #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,8 +441,13 @@ img.userimage {
  * Read next
  */
 .read-next {
+  -webkit-align-content: flex-start;
+  -ms-align-content: flex-start;
   align-content: flex-start;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin: 15px auto 0;
   max-width: 1024px;
@@ -453,7 +458,11 @@ img.userimage {
   color: #757575;
   padding: 2em;
   text-align: center;
+  -webkit-flex: 1;
+  -ms-flex: 1;
   flex: 1;
+  -webkit-flex-basis: 300px;
+  -ms-flex-basis: 300px;
   flex-basis: 300px;
 }
 .read-next .read-next-story:hover {
